Structure react app

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "Joseph Lao",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "4.0.0-alpha.6",
     "object-assign": "4.1.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
