--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "author": "Joseph Lao",
   "license": "MIT",
+  "pre-commit": "test",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "object-assign": "4.1.0",
@@ -76,6 +77,7 @@
     "npm-run-all": "4.0.2",
     "opn-cli": "3.1.0",
     "postcss-loader": "1.2.1",
+    "pre-commit": "1.2.2",
     "prompt": "1.0.0",
     "prop-types": "15.5.10",
     "react-hot-loader": "3.0.0-beta.6",
