--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "object-assign": "4.1.0",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.0.0",
+    "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-test-renderer": "16.0.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0"
   },
@@ -59,7 +60,8 @@
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "2.13.1",
     "css-loader": "0.28.4",
-    "enzyme": "2.9.1",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
     "eslint": "4.2.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.3.0",
@@ -103,7 +105,11 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/tools/assetsTransformer.js"
-    }
+    },
+    "setupFiles": [
+      "raf/polyfill",
+      "./tools/enzymeTestAdapterSetup.js"
+    ]
   },
   "babel": {
     "presets": [
