--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "pre-commit": "test",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "4.7.0",
     "object-assign": "4.1.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
